--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "lite-server --baseDir=dist",
-    "start": "concurrently \"yarn watch\" \"yarn server\"",
-    "compiler": "tsc -p tsconfig.json",
-    "watch": "tsc -p tsconfig.json -w"
+    "start": "concurrently \"npm run watch\" \"npm run server\"",
+    "compile": "tsc",
+    "watch": "tsc -w"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^6.0.0",
     "lite-server": "^2.6.1",
-    "typescript": "4.2.2"
+    "typescript": "^4.2.2"
   }
 }
